--- a/mortalidade_mat15-20.ipynb
+++ b/mortalidade_mat15-20.ipynb
@@ -35,7 +35,7 @@
         "\n",
         "  return df_mat20, df_mat19, df_mat18, df_mat17, df_mat16, df_mat15\n"
       ],
-      "execution_count": 1,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
         "  return pd.DataFrame(df_concat).to_csv(\"union.csv\", encoding='utf-8', index=False)\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
         "  return pd.DataFrame(new_csv).to_csv(\"new_cols_union.csv\", encoding='utf-8', index=False)\n",
         "\n"
       ],
-      "execution_count": 13,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -268,33 +268,33 @@
         "  new_csv['%RACACOR_NULL'] = [f'{null_racacor:,.2f}%']\n",
         "  new_csv['%RACACOR_INCONS'] = [f'{incons_racacor:,.2f}%']\n",
         "\n",
-        "  new_csv['%ESTCIV'] = [f'{null_estciv:,.2f}%']\n",
-        "  new_csv['%ESTCIV'] = [f'{incons_estciv:,.2f}%']\n",
+        "  new_csv['%ESTCIV_NULL'] = [f'{null_estciv:,.2f}%']\n",
+        "  new_csv['%ESTCIV_INCONS'] = [f'{incons_estciv:,.2f}%']\n",
         "\n",
-        "  new_csv['%ESC2010'] = [f'{null_esc2010:,.2f}%']\n",
-        "  new_csv['%ESC2010'] = [f'{incons_esc2010:,.2f}%']\n",
+        "  new_csv['%ESC2010_NULL'] = [f'{null_esc2010:,.2f}%']\n",
+        "  new_csv['%ESC2010_INCONS'] = [f'{incons_esc2010:,.2f}%']\n",
         "\n",
-        "  new_csv['%OCUP'] = [f'{null_ocup:,.2f}%']\n",
-        "  new_csv['%OCUP'] = [f'{incons_ocup:,.2f}%']\n",
+        "  new_csv['%OCUP_NULL'] = [f'{null_ocup:,.2f}%']\n",
+        "  new_csv['%OCUP_INCONS'] = [f'{incons_ocup:,.2f}%']\n",
         "\n",
-        "  new_csv['%CODMUNRES'] = [f'{null_codmunres:,.2f}%']\n",
-        "  new_csv['%CODMUNRES'] = [f'{incons_codmunres:,.2f}%']\n",
+        "  new_csv['%CODMUNRES_NULL'] = [f'{null_codmunres:,.2f}%']\n",
+        "  new_csv['%CODMUNRES_INCONS'] = [f'{incons_codmunres:,.2f}%']\n",
         "\n",
-        "  new_csv['%OBITOGRAV'] = [f'{null_obitograv:,.2f}%']\n",
-        "  new_csv['%OBITOGRAV'] = [f'{incons_obitograv:,.2f}%']\n",
+        "  new_csv['%OBITOGRAV_NULL'] = [f'{null_obitograv:,.2f}%']\n",
+        "  new_csv['%OBITOGRAV_INCONS'] = [f'{incons_obitograv:,.2f}%']\n",
         "\n",
-        "  new_csv['%OBITOPUERP'] = [f'{null_obitopuerp:,.2f}%']\n",
-        "  new_csv['%OBITOPUERP'] = [f'{incons_obitopuerp:,.2f}%']\n",
+        "  new_csv['%OBITOPUERP_NULL'] = [f'{null_obitopuerp:,.2f}%']\n",
+        "  new_csv['%OBITOPUERP_INCONS'] = [f'{incons_obitopuerp:,.2f}%']\n",
         "\n",
-        "  new_csv['%ASSISTMED'] = [f'{null_assistmed:,.2f}%']\n",
-        "  new_csv['%ASSISTMED'] = [f'{incons_assistmed:,.2f}%']\n",
+        "  new_csv['%ASSISTMED_NULL'] = [f'{null_assistmed:,.2f}%']\n",
+        "  new_csv['%ASSISTMED_INCONS'] = [f'{incons_assistmed:,.2f}%']\n",
         "  \n",
         "\n",
         "  # Gerando csv para análise de qualidade  \n",
         "  df_analise = pd.DataFrame(new_csv).to_excel(\"analise_qualidade.xlsx\", encoding='utf-8', index=False)\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -331,7 +331,7 @@
         "\n",
         "  df['DTOBITO'] = pd.to_datetime(dt_obito_format)\n"
       ],
-      "execution_count": 3,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -357,7 +357,7 @@
         "\n",
         "  df['NATURAL'] = arr_natural\n"
       ],
-      "execution_count": 4,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -380,7 +380,7 @@
         "\n",
         "  df['RACACOR'] = arr_racacor\n"
       ],
-      "execution_count": 5,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
         "\n",
         "  df['ESTCIV'] = arr_estciv\n"
       ],
-      "execution_count": 6,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -426,7 +426,7 @@
         "\n",
         "  df['ESC2010'] = arr_esc2010\n"
       ],
-      "execution_count": 7,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -449,7 +449,7 @@
         "\n",
         "  df['OBITOGRAV'] = arr_obitograv\n"
       ],
-      "execution_count": 8,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -472,7 +472,7 @@
         "\n",
         "  df['OBITOPUERP'] = arr_obitopuerp\n"
       ],
-      "execution_count": 9,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -496,7 +496,83 @@
         "  df['ASSISTMED'] = arr_assistmed\n",
         "\n"
       ],
-      "execution_count": 10,
+      "execution_count": 98,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UC9zG1kzxXIi"
+      },
+      "source": [
+        "# Traduzindo códigos dos municípios\n",
+        "\n",
+        "import json\n",
+        "\n",
+        "def decif_codmun(df):\n",
+        "\n",
+        "  url = \"https://servicodados.ibge.gov.br/api/v1/localidades/estados/ES/municipios\"\n",
+        "  json = pd.read_json(url, dtype=str)\n",
+        "  #df = pd.read_csv('final_dataset.csv')\n",
+        "\n",
+        "  dic_mun = []\n",
+        "  df_codmun = df['CODMUNRES']\n",
+        "  df['NOMEMUNRES'] = ''\n",
+        "\n",
+        "  dic = []\n",
+        "\n",
+        "  for i in range(len(json['id'])):\n",
+        "    dic_mun.append({json['id'][i]:json['nome'][i]})\n",
+        "\n",
+        "  for i in range(len(dic_mun)):\n",
+        "    for id, mun in dic_mun[i].items():\n",
+        "      for j in range(len(df_codmun)):\n",
+        "        if (str(id)[0:6] == str(df_codmun[j])):\n",
+        "          df['NOMEMUNRES'][j] = mun\n",
+        "\n"
+      ],
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IeKar2nSduzw"
+      },
+      "source": [
+        "# Traduzindo códigos das ocupações\n",
+        "\n",
+        "def decif_codocup(df, df_codocup):\n",
+        "\n",
+        "  #df = pd.read_csv('new_cols_union.csv')\n",
+        "  #df_codocup = pd.read_csv('lista_canonicos.csv')\n",
+        "\n",
+        "  arr_cod = [item.replace('-','') for item in df_codocup['codigo']]\n",
+        "  arr_desc = df_codocup['termo']\n",
+        "  dic_cod = []\n",
+        "  df['NOMEOCUP'] = ''\n",
+        "  col_ocup = df['OCUP']\n",
+        "\n",
+        "  for i in range(len(arr_cod)):\n",
+        "    dic_cod.append({arr_cod[i]:arr_desc[i]})\n",
+        "\n",
+        "  cont = 0\n",
+        "  cont2 = 0\n",
+        "\n",
+        "  while (cont < len(dic_cod)):\n",
+        "    for cod, desc in dic_cod[cont].items():\n",
+        "      while (cont2 < len(col_ocup)):\n",
+        "        if (str(cod) == str(col_ocup[cont2])[0:6]):\n",
+        "          df['NOMEOCUP'][cont2] = str(desc)\n",
+        "          cont2 += 1\n",
+        "        else:\n",
+        "          cont2 += 1\n",
+        "            \n",
+        "      cont += 1\n",
+        "      cont2 = 0\n",
+        "         \n"
+      ],
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -518,20 +594,26 @@
         "  new_csv['ESTCIV'] = df['ESTCIV']\n",
         "  new_csv['ESC2010'] = df['ESC2010']\n",
         "  new_csv['OCUP'] = df['OCUP']\n",
+        "  new_csv['NOMEOCUP'] = df['NOMEOCUP']\n",
         "  new_csv['CODMUNRES'] = df['CODMUNRES']\n",
+        "  new_csv['NOMEMUNRES'] = df['NOMEMUNRES']\n",
         "  new_csv['OBITOGRAV'] = df['OBITOGRAV']\n",
         "  new_csv['OBITOPUERP'] = df['OBITOPUERP']\n",
         "  new_csv['ASSISTMED'] = df['ASSISTMED']\n",
         "\n",
         "  return pd.DataFrame(new_csv).to_csv(\"final_dataset.csv\", encoding='utf-8', index=False)\n"
       ],
-      "execution_count": 11,
+      "execution_count": 103,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9qK6C1floNzP"
+        "id": "9qK6C1floNzP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "769278cc-68de-4792-d98d-3edc47388939"
       },
       "source": [
         "import pandas as pd\n",
@@ -542,6 +624,7 @@
         "  select_cols_union()\n",
         "\n",
         "  df = pd.read_csv('new_cols_union.csv')\n",
+        "  df_codocup = pd.read_csv('lista_canonicos.csv') # CSV - Código das ocupações\n",
         "\n",
         "  calc_perc(df)\n",
         "  transform_dtObito(df)\n",
@@ -552,13 +635,26 @@
         "  transf_obitograv(df)\n",
         "  transf_obitopuerp(df)\n",
         "  transf_assistmed(df)\n",
+        "  decif_codmun(df)\n",
+        "  decif_codocup(df, df_codocup)\n",
         "  create_csv(df)\n",
         "  \n",
         "\n",
         "main()"
       ],
-      "execution_count": 15,
-      "outputs": []
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:24: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+          ]
+        }
+      ]
     }
   ]
 }
