--- a/TrabalhoCassioFinal-Correto-1.ipynb
+++ b/TrabalhoCassioFinal-Correto-1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7353c141",
+   "id": "1bc22598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,13 @@
     "%matplotlib inline\n",
     "import json\n",
     "\n",
-    "df = pd.read_csv('C:/Users/Thiago/Desktop/DOMAT/ANIMES21.csv',dtype=str)\n"
+    "df = pd.read_csv('C:/Users/Thiago/OneDrive/Área de Trabalho/arquivo/ANIMES21.csv',dtype=str)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c1768048",
+   "id": "b51ede84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b1603b1d",
+   "id": "bd66c95d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "01460df3",
+   "id": "1727206f",
    "metadata": {},
    "outputs": [
     {
@@ -96,8 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a38348ec",
+   "execution_count": 5,
+   "id": "6fa44d2c",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "[5 rows x 77 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,8 +306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "43dfebbb",
+   "execution_count": 6,
+   "id": "fd3751fb",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "[78 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "57bd48ac",
+   "id": "53d9a35a",
    "metadata": {},
    "outputs": [
     {
@@ -872,8 +872,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "9b472f7a",
+   "execution_count": 8,
+   "id": "79549726",
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
        "[6 rows x 77 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,8 +1117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "a007b690",
+   "execution_count": 9,
+   "id": "b4bba8b7",
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
        "Length: 77, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,39 +1149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "484b9e88",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CLI_HEMORR    6\n",
-       "ANI_LAGART    6\n",
-       "NU_AMPO_7     6\n",
-       "NU_AMPOL_4    6\n",
-       "ANT_LOCALI    6\n",
-       "NU_AMPOL_6    6\n",
-       "NU_AMPOL_8    6\n",
-       "NU_AMPOL_1    6\n",
-       "NU_AMPOLAS    6\n",
-       "ANI_ARANHA    6\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.isnull().sum().sort_values(ascending=False)[:10] #Método semelhante para uma série."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "fc9b9b7b",
+   "execution_count": 10,
+   "id": "2056121a",
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1169,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,8 +1180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "d065c8fe",
+   "execution_count": 11,
+   "id": "b459dd6f",
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1190,7 @@
        "197"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,40 +1201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "3acc8424",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TP_NOT        object\n",
-       "ID_AGRAVO     object\n",
-       "DT_NOTIFIC    object\n",
-       "SEM_NOT       object\n",
-       "NU_ANO        object\n",
-       "               ...  \n",
-       "DOENCA_TRA    object\n",
-       "EVOLUCAO      object\n",
-       "DT_OBITO      object\n",
-       "DT_ENCERRA    object\n",
-       "DT_DIGITA     object\n",
-       "Length: 77, dtype: object"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "1960c1b5",
+   "execution_count": 13,
+   "id": "52a0b7d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,8 +1211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "d7d97d8e",
+   "execution_count": 14,
+   "id": "3a0f2960",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1410,7 @@
        "[5 rows x 77 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,8 +1421,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "5a66e028",
+   "execution_count": 15,
+   "id": "86213498",
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1431,7 @@
        "Text(0, 0.5, 'DT_ENCERRA')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1520,8 +1457,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "b43b8744",
+   "execution_count": 16,
+   "id": "2a117ab1",
    "metadata": {},
    "outputs": [
     {
@@ -1542,8 +1479,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "5eb74697",
+   "execution_count": 17,
+   "id": "a744073d",
    "metadata": {},
    "outputs": [
     {
@@ -1564,8 +1501,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "1b3b07e5",
+   "execution_count": 18,
+   "id": "89ff498f",
    "metadata": {},
    "outputs": [
     {
@@ -1586,8 +1523,367 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "ecc135c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TP_NOT</th>\n",
+       "      <th>ID_AGRAVO</th>\n",
+       "      <th>DT_NOTIFIC</th>\n",
+       "      <th>SEM_NOT</th>\n",
+       "      <th>NU_ANO</th>\n",
+       "      <th>SG_UF_NOT</th>\n",
+       "      <th>ID_MUNICIP</th>\n",
+       "      <th>ID_REGIONA</th>\n",
+       "      <th>DT_SIN_PRI</th>\n",
+       "      <th>SEM_PRI</th>\n",
+       "      <th>...</th>\n",
+       "      <th>COM_SISTEM</th>\n",
+       "      <th>COM_RENAL</th>\n",
+       "      <th>COM_EDEMA</th>\n",
+       "      <th>COM_SEPTIC</th>\n",
+       "      <th>COM_CHOQUE</th>\n",
+       "      <th>DOENCA_TRA</th>\n",
+       "      <th>EVOLUCAO</th>\n",
+       "      <th>DT_OBITO</th>\n",
+       "      <th>DT_ENCERRA</th>\n",
+       "      <th>DT_DIGITA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>X29</td>\n",
+       "      <td>2021-01-05</td>\n",
+       "      <td>202101</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>52</td>\n",
+       "      <td>520060</td>\n",
+       "      <td>1784</td>\n",
+       "      <td>20201204</td>\n",
+       "      <td>202049</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>2021-01-07</td>\n",
+       "      <td>2021-01-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>X29</td>\n",
+       "      <td>2021-01-10</td>\n",
+       "      <td>202102</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>31</td>\n",
+       "      <td>314630</td>\n",
+       "      <td>1465</td>\n",
+       "      <td>20210110</td>\n",
+       "      <td>202102</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>2021-01-10</td>\n",
+       "      <td>2021-01-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>X29</td>\n",
+       "      <td>2021-01-17</td>\n",
+       "      <td>202103</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>31</td>\n",
+       "      <td>315430</td>\n",
+       "      <td>1471</td>\n",
+       "      <td>20210117</td>\n",
+       "      <td>202103</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>2021-01-19</td>\n",
+       "      <td>2021-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>X29</td>\n",
+       "      <td>2021-01-18</td>\n",
+       "      <td>202103</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>31</td>\n",
+       "      <td>313770</td>\n",
+       "      <td>1454</td>\n",
+       "      <td>20210118</td>\n",
+       "      <td>202103</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>2021-01-28</td>\n",
+       "      <td>2021-01-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>X29</td>\n",
+       "      <td>2021-01-23</td>\n",
+       "      <td>202103</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>31</td>\n",
+       "      <td>312420</td>\n",
+       "      <td>1454</td>\n",
+       "      <td>20210123</td>\n",
+       "      <td>202103</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>2021-01-23</td>\n",
+       "      <td>2021-01-28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 77 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  TP_NOT ID_AGRAVO DT_NOTIFIC SEM_NOT NU_ANO SG_UF_NOT ID_MUNICIP ID_REGIONA  \\\n",
+       "0      2       X29 2021-01-05  202101   2021        52     520060       1784   \n",
+       "1      2       X29 2021-01-10  202102   2021        31     314630       1465   \n",
+       "2      2       X29 2021-01-17  202103   2021        31     315430       1471   \n",
+       "3      2       X29 2021-01-18  202103   2021        31     313770       1454   \n",
+       "4      2       X29 2021-01-23  202103   2021        31     312420       1454   \n",
+       "\n",
+       "  DT_SIN_PRI SEM_PRI  ... COM_SISTEM COM_RENAL COM_EDEMA COM_SEPTIC  \\\n",
+       "0   20201204  202049  ...          2       NaN       NaN        NaN   \n",
+       "1   20210110  202102  ...          2       NaN       NaN        NaN   \n",
+       "2   20210117  202103  ...          2       NaN       NaN        NaN   \n",
+       "3   20210118  202103  ...        NaN       NaN       NaN        NaN   \n",
+       "4   20210123  202103  ...          2       NaN       NaN        NaN   \n",
+       "\n",
+       "  COM_CHOQUE DOENCA_TRA EVOLUCAO  DT_OBITO DT_ENCERRA  DT_DIGITA  \n",
+       "0        NaN          2        1           2021-01-07 2021-01-07  \n",
+       "1        NaN          2        1           2021-01-10 2021-01-21  \n",
+       "2        NaN          2        1           2021-01-19 2021-01-19  \n",
+       "3        NaN        NaN      NaN           2021-01-28 2021-01-28  \n",
+       "4        NaN          2        1           2021-01-23 2021-01-28  \n",
+       "\n",
+       "[5 rows x 77 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "98a1e016",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['TP_NOT', 'ID_AGRAVO', 'DT_NOTIFIC', 'SEM_NOT', 'NU_ANO',\n",
+       "       'SG_UF_NOT', 'ID_MUNICIP', 'ID_REGIONA', 'DT_SIN_PRI', 'SEM_PRI',\n",
+       "       'DT_NASC', 'NU_IDADE_N', 'CS_SEXO', 'CS_GESTANT', 'CS_RACA',\n",
+       "       'CS_ESCOL_N', 'SG_UF', 'ID_MN_RESI', 'ID_RG_RESI', 'ID_PAIS',\n",
+       "       'DT_INVEST', 'ID_OCUPA_N', 'ANT_DT_ACI', 'ANT_UF', 'ANT_MUNIC_',\n",
+       "       'ANT_LOCALI', 'ANT_ZONA', 'ANT_TEMPO_', 'ANT_LOCA_1', 'MCLI_LOCAL',\n",
+       "       'CLI_DOR', 'CLI_EDEMA', 'CLI_EQUIMO', 'CLI_NECROS', 'CLI_LOCAL_',\n",
+       "       'CLI_LOCA_1', 'MCLI_SIST', 'CLI_NEURO', 'CLI_HEMORR', 'CLI_VAGAIS',\n",
+       "       'CLI_MIOLIT', 'CLI_RENAL', 'CLI_OUTR_2', 'CLI_OUTR_3',\n",
+       "       'CLI_TEMPO_', 'TP_ACIDENT', 'ANI_TIPO_1', 'ANI_SERPEN',\n",
+       "       'ANI_ARANHA', 'ANI_LAGART', 'TRA_CLASSI', 'CON_SOROTE',\n",
+       "       'NU_AMPOLAS', 'NU_AMPOL_1', 'NU_AMPOL_8', 'NU_AMPOL_6',\n",
+       "       'NU_AMPOL_4', 'NU_AMPO_7', 'NU_AMPO_5', 'NU_AMPOL_9', 'NU_AMPOL_3',\n",
+       "       'COM_LOC', 'COM_SECUND', 'COM_NECROS', 'COM_COMPOR', 'COM_DEFICT',\n",
+       "       'COM_APUTAC', 'COM_SISTEM', 'COM_RENAL', 'COM_EDEMA', 'COM_SEPTIC',\n",
+       "       'COM_CHOQUE', 'DOENCA_TRA', 'EVOLUCAO', 'DT_OBITO', 'DT_ENCERRA',\n",
+       "       'DT_DIGITA'], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns.values # Mostrar todas as colunas da tabela do Csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bcf5f97a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.filter(items=['DT_NOTIFIC','DT_ENCERRA','DT_DIGITA']) #Selecionando as colunas para trabalhar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9aff32b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DT_NOTIFIC</th>\n",
+       "      <th>DT_ENCERRA</th>\n",
+       "      <th>DT_DIGITA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-01-05</td>\n",
+       "      <td>2021-01-07</td>\n",
+       "      <td>2021-01-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-01-10</td>\n",
+       "      <td>2021-01-10</td>\n",
+       "      <td>2021-01-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-01-17</td>\n",
+       "      <td>2021-01-19</td>\n",
+       "      <td>2021-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-01-18</td>\n",
+       "      <td>2021-01-28</td>\n",
+       "      <td>2021-01-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-01-23</td>\n",
+       "      <td>2021-01-23</td>\n",
+       "      <td>2021-01-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2021-02-25</td>\n",
+       "      <td>2021-02-25</td>\n",
+       "      <td>2021-03-04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  DT_NOTIFIC DT_ENCERRA  DT_DIGITA\n",
+       "0 2021-01-05 2021-01-07 2021-01-07\n",
+       "1 2021-01-10 2021-01-10 2021-01-21\n",
+       "2 2021-01-17 2021-01-19 2021-01-19\n",
+       "3 2021-01-18 2021-01-28 2021-01-28\n",
+       "4 2021-01-23 2021-01-23 2021-01-28\n",
+       "5 2021-02-25 2021-02-25 2021-03-04"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7003c898",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"TrabalhoCassioFinal-Correto-2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5f6476fe",
+   "id": "de117cd7",
    "metadata": {},
    "outputs": [],
    "source": []
